# Pasform

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml
data/: download_dataset.py
examples/: 0_downsample_stl.py  1_run_pointcloud_registration.py  1_run_pointcloud_registration_on_folder.py  2_cluster_data.py  2_cluster_data_tmp.py  interactive_visualization_of_registration.py  plot_point_clouds.py
pasform/: feature_methods.py  registration.py  registration_utils.py  utils.py  viz.py  viz3d.py
src/: feature_methods.py  registration.py  registration_utils.py  viz.py  viz3d.py
