[tool.poetry]
name = "pasform"
version = "0.1.0"
description = "A pipeline for 3D registration and clustering of archaelogical artefacts."
authors = ["Tue Boesen <tue.boesen@alexandra.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
torch = "^2.2.1"
pyvista = "^0.43.4"
opencv-python = "^4.9.0.80"
jakteristics = "^0.6.0"
point-cloud-utils = "^0.30.4"
scikit-learn = "^1.4.1.post1"
open3d = "^0.18.0"
addict = "^2.4.0"
pillow = "^10.3.0"
matplotlib = "^3.8.4"
pandas = "^2.2.1"
pyyaml = "^6.0.1"
tqdm = "^4.66.2"
pyquaternion = "^0.9.9"
seaborn = "^0.13.2"
imageio = "^2.34.0"
openpyxl = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"